--- a/intro/tech-overview.tex
+++ b/intro/tech-overview.tex
@@ -33,4 +33,4 @@ g_{A_{n^{2/3}}}(
 	vk_{n^{2/3},m})\}$ such that $g$ is also at the $\mu$-th position in the set (this is straightforward to do in Chandran et al.'s set-membership proof).
 We commit to $x_1=vk_{\mu,\nu},\ldots,x_m=vk_{\mu,m}$ and we prove using Groth-Sahai proofs that $g = g_{A'}(x_1,\ldots,x_m)$. Again, this part of the proof adds $\Theta(\sqrt[3]{n})$ group elements.
 
-Finally, since $h(A')=h(A_\mu)$ and $g_{A'}(x_1,\ldots,x_m) = g = g_{A_{\mu}}(vk_{\mu,1},\ldots,x_{\mu,m})$ we conclude that $x_1,\ldots,x_m$ is a permutation of $vk_{\mu,1},\ldots,vk_{\mu,m}$. I suffices to give a third set membership proof that $c$ opens to some element in $\{x_1,\ldots,x_m\}$ (but we can omit this proof setting $x_1 =vk_{\mu,\nu}$ and a clever use of the ``permutation friendly'' properties of $h$ and $g$).
+Finally, since $h(A')=h(A_\mu)$ and $g_{A'}(x_1,\ldots,x_m) = g = g_{A_{\mu}}(vk_{\mu,1},\ldots,x_{\mu,m})$ we conclude that $x_1,\ldots,x_m$ is a permutation of $vk_{\mu,1},\ldots,vk_{\mu,m}$. It suffices to give a third set membership proof that $c$ opens to some element in $\{x_1,\ldots,x_m\}$ (but we can omit this proof setting $x_1 =vk_{\mu,\nu}$ and a clever use of the ``permutation friendly'' properties of $h$ and $g$).
