--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -90,7 +90,7 @@
     
             \input{prelim/bb-signatures}
 
-      	\subsection{Chandran et al.'s Ring Signature} \label{sec:chan-rs}
+      	\subsection{Chandran et al.'s Set-Membership Proof} \label{sec:chan-rs}
 	
        		\input{intro/chandran}
 
@@ -160,7 +160,7 @@ Shorter Ring Signatures from Standard Assumptions: Supplementary Material
 
 
 	%\section{Proof of Theorem \ref{theo:security}} \label{sec:sec-proof}
-	\section{Groth-Sahai proofs for $h$ and $g$ in the SXDH setting}
+	\section{Groth-Sahai proofs for $h$ and $g$ in the SXDH setting} \label{sec:GSproofs-hg}
 	
 	In this section we detail the Groth-Sahai proofs used by $h$ and $g$ in section \ref{sec:hf-sxdh}. We also describe how these proofs can be re-randomized, as shown by Belenky et al.~\cite{C:BCCKLS09}.
 		\subsection{Groth-Sahai proofs for $\beta(\beta-1)=0$} \label{sec:GSproofs-h}
