--- a/our-construction/our-hashes-sxdh.tex
+++ b/our-construction/our-hashes-sxdh.tex
@@ -15,7 +15,7 @@
 \end{align*}
 
 Note that, if $\vecb{a}_1,\ldots \vecb{a}_m\in\mathcal{Q}_{1}$, then $\matr{A} = (\vec{a}_1\cat\cdots\cat\vecb{a}_m)\in\mathcal{Q}_{m}$ and $[\vecb{a}_i]_1$ is a Groth-Sahai commitment to $\beta_i$.
-Therefore $\sum_{i=0}^m[\vecb{a}_i]_1$ is a Groth-Sahai commitment to the hamming weight of $\vecb{\beta}$, that is $\Com_{[\matr{U}]_1}(\sum_{i=1}^m \beta_i;\sum_{i=0}^m r_i)$.
+Therefore $\sum_{i=0}^m[\vecb{a}_i]_1$ is a Groth-Sahai commitment to the hamming weight of $\vecb{\beta}$, that is $\Com_{[\matr{U}]_1}(\sum_{i=1}^m \beta_i;\sum_{i=1}^m r_i)$.
 
 Since $h$ is not efficiently computable, we craft a key $k$ which encodes a matrix $\matr{A}$ and makes possible the construction proofs that $\matr{A}'\in\mathcal{Q}_m$ and $h(\matr{A}')=h(\matr{A})$. Concretely, the global key is a Groth-Sahai commitment key $[\matr{U}]_1,[\matr{V}]_2$ while each local key is $[\vecb{a}]_1$ and a proof that $\vec{a}\in\mathcal{Q}_1$.
 
@@ -60,10 +60,10 @@ Further, given $[\matr{A}]_1$ and proofs that $\matr{a}_1,\ldots,\matr{a}_m\in\m
 where $\gamma = \sum_{i=1}^m \delta_i$,
 which can be proved with a Groth-Sahai proof. Further, such proof corresponds to a proof of membership in the span of $\vecb{u}_2$ which can be proved using more efficient QA-NIZK proofs \cite{C:JutRoy14,EC:KilWee15}. In this case the proof consists of only 1 element of $\GG_1$, instead of the $3$ required by Groth-Sahai proofs.
 
-\subsubsection{The function $g$.} Consider perfectly binding Groth-Sahai commitment keys $[\matr{U}]_1=[\vecb{u}_1\cat\vecb{u}_2]_1,[\matr{W}]_2 = [\vecb{w}_1\cat\vecb{w}_2]_2$, together with a trapdoor for the commitment scheme $\vecb{k}\in\Z_q^2$ such that $\vecb{k}^\top\vecb{u}_2=0$ and $\vecb{k}^\top\vecb{u}_1=1$, consider also $[\matr{A}]_1$ such that $\matr{A}\gets\mathcal{Q}_m^\vecb{\beta}$.
+\subsubsection{The function $g$.} Consider perfectly binding Groth-Sahai commitment keys $[\matr{U}]_1=[\vecb{u}_1\cat\vecb{u}_2]_1,[\matr{V}]_2,[\matr{W}]_2 = [\vecb{w}_1\cat\vecb{w}_2]_2$, together with a trapdoor $\vecb{k}\in\Z_q^2$ such that $\vecb{k}^\top\vecb{u}_2=0$ and $\vecb{k}^\top\vecb{u}_1=1$, consider also $[\matr{A}]_1$ such that $\matr{A}\gets\mathcal{Q}_m^\vecb{\beta}$.
 
 We start defining $g$ as $g_\matr{A}(\vecb{x}) = \vecb{k}^\top\matr{A}\vecb{x} = \vecb{\beta}^\top\vecb{x}$. Although not efficiently computable, similarly as with $h$, it is possible to give a Groth-Sahai proof showing that some $\vecb{x},\vecb{x}'$ are indeed a collision (provided some extra information is given in the key).
-In our ring signature $\vecb{\beta}=0$ but, since it remains hidden to the adversary, we could change to a game where $\vecb{\beta}$ is a random bit-vector of hamming weight 1. Since the unique coordinate $i$ such that $\beta_i=1$ remains hidden, $g_\matr{A}(\vecb{x}) = x_i \neq x'_i =g_\matr{A}(\vecb{x}')$ with probability $\approx 1/m$, whenever $\vecb{x}\neq\vecb{x}'$. But this reasoning is flawed, since $\vecb{\beta}=0$ in the actual instantiation and thus $g_\matr{A}(\vecb{x}) = 0$ for all $\vecb{x}\in\Z_q^m$ and is trivial to find collisions.
+In our ring signature $\vecb{\beta}=0$ but, since it remains hidden to the adversary, we could change to a game where $\vecb{\beta}$ is a random bit-vector of hamming weight 1. Since the unique coordinate $i$ such that $\beta_i=1$ remains hidden, $g_\matr{A}(\vecb{x}) = x_i \neq x'_i =g_\matr{A}(\vecb{x}')$ with probability roughly $1/m$, whenever $\vecb{x}\neq\vecb{x}'$. But this reasoning is flawed, since $\vecb{\beta}=0$ in the actual instantiation and thus $g_\matr{A}(\vecb{x}) = 0$ for all $\vecb{x}\in\Z_q^m$ and is trivial to find collisions.
 We will show that what is indeed hard to compute is the Groth-Sahai proof that $\vecb{\beta}^\top\vecb{x} = \vecb{\beta}^\top\vecb{x}'$, even when $g_\matr{A}(\vecb{x})\equiv 0$.
 
 The problem is now, how to encode the proof in the hash function? Lets see how the Groth-Sahai proof for the statement $\vecb{\beta}^\top\vecb{x} = y$ looks like. We would like $\vecb{\beta},\vecb{x}$ and $y$ to remain hidden, so we commit to these values with $[\matr{A}]_1$, $[\matr{C}]_2 = [\vecb{w}_1]_2\vecb{x}^\top+[\vecb{u}_2]_2\vecb{s}^\top$ and $[\vecb{d}]_1 = \vecb{\beta}^\top\vecb{x}[\vecb{u}_1]_1+t[\vecb{u}_2]_1$, respectively. The verification equation is
@@ -73,13 +73,13 @@ The problem is now, how to encode the proof in the hash function? Lets see how t
 \end{align}
 We define $g$ as the left side of the previous equation
 $$
-g_{\matr{A}}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1):= [\matr{A}]_1[\matr{C}^\top]_2-[\vecb{u}_2][\vecb{\psi}^\top]_2-[\vecb{\omega}]_1[\vecb{w}_2^\top]_2.
+g_{\matr{A}}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1):= [\matr{A}]_1[\matr{C}^\top]_2-[\vecb{u}_2]_1[\vecb{\psi}^\top]_2-[\vecb{\omega}]_1[\vecb{w}_2^\top]_2.
 $$
-Of course, there is an alternative of computing $g$ as $g_{\matr{A}}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1)=[\vecb{d}]_1[\vecb{w}_1^\top]_2$. For simplicity, we may simply write $g_\matr{A}(\matr{C})$ instead of $g_{\matr{A}}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1)$.
+Note that there is an alternative of computing $g$ as $g_{\matr{A}}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1)=[\vecb{d}]_1[\vecb{w}_1^\top]_2$. For simplicity, we may simply write $g_\matr{A}(\matr{C})$ instead of $g_{\matr{A}}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1)$.
 
 However, there are still two ways of computing collisions. First, one may pick $[\matr{C}]_2,\allowbreak[\vecb{\psi}']_2,[\vecb{\omega}']_1$ such that $[\vecb{u}_2][{\vecb{\psi}'}^\top]_2+[\vecb{\omega}']_1[\vecb{w}_2^\top]_2=[\vecb{u}_2][\vecb{\psi}^\top]_2+[\vecb{\omega}]_1[\vecb{w}_2^\top]_2$. Second, one may pick $[\matr{C}]_2,[\vecb{\psi}']_2,[\vecb{\omega}']_1$ such that $[\matr{C}']_2 = [\matr{C}]_2 + [\vecb{w}_2]\vecb{\delta}^\top$. It turns out that this are the only type of collisions. Consequently, we consider collisions only with respect to the first argument and we we will weaken the equality relation to the following equivalence relation
 $$
-\matr{C}'\simeq_\matr{W} \matr{C} \iff \exists \vecb{\delta}\in\Z_q^m \text{ s.t. } \matr{C}' = \matr{C}+\vecb{u}_2\vecb{\delta}^\top.
+\matr{C}'\simeq_\matr{W} \matr{C} \iff \exists \vecb{\delta}\in\Z_q^m \text{ s.t. } \matr{C}' = \matr{C}+\vecb{w}_2\vecb{\delta}^\top.
 $$
 Further, we prove a lemma analogous to lemma \ref{lemma:hg} where we consider collision resistance with respect to relation $\sim_\matr{W}$ 
 $$
@@ -98,7 +98,7 @@ where $\mathcal{S}_m\subset\bits^{m\times m}$ is the set of permutation matrices
  %The global key $k_0$ contains the Groth-Sahai commitment keys and each local key $k_i$ contains Groth-Sahai proofs that $\beta x=y$, for $\beta=\beta_i,x=x_i,y=\beta_ix_i$, and $i\in[m]$. We note that such proofs can be re-randomized as shown in Appendix \ref{sec:GSproofs-g}.
 %We prove $g$'s collision resistance in an scenario where $k$ gives additional information about $[\matr{A}]_1$ to the adversary.
 %Specifically, $k_0$ contains the Groth-Sahai commitment keys $[\matr{U}]_1,\allowbreak[\matr{V}]_2,\allowbreak[\matr{W}]_2$. We use two commitment keys in $\GG_2$ in order to open commitments computed with $[\matr{W}]_2$ even when the distribution of $[\matr{V}]_2$ is changed. Hence, we prove collision resistance even when the adversary knows $\matr{W}$. Each $k_i$ contains a proof showing that $\matr{a}_i\in\mathcal{Q}_1$, as shown in App.~\ref{sec:GSproofs-g}, and a proof that $\beta_ix_i = y_i$, as shown in App.~\ref{sec:GSproofs-g}. We prove collision resistance with respect to adaptive adversaries only when $\vecb{\beta} = \vecb{0}$. In the general case, when $\vecb{\beta}\in\bits^m$ the security degrades exponentially with the hamming weight of $\vecb{\beta}$, although we don't prove it. Anyway, for our ring signatures it will suffice collision resistance with respect to $\vecb{\beta}=\vecb{0}$.
-$\KGen$ on input a group key $gk$ and vectors $\vecb{\beta}\in\bits^m$ and $\vecb{x}\in\Z_q^m$,  outputs $(k_0,k_1,\ldots,k_m)$ where $k_0 \gets \KGen_\mathsf{global}(gk)$ and  $k_i\gets \KGen_{\mathsf{local}}(gk,k_0,\beta_i)$. The global key generator $\KGen_\mathsf{global}$ on input a group key outputs Groth-Sahai commitment keys $[\matr{U}]_1,[\matr{V}]_2,[\matr{W}]_2$. We use two commitment keys in $\GG_2$ in order to open commitments computed with $[\matr{W}]_2$ even when the distribution of $[\matr{V}]_2$ is changed. Hence, we prove collision resistance even when the adversary knows $\matr{W}$. The local key generator on input a group key, a global key, and a bit $\beta\in\bits$, samples $\matr{a}\gets\mathcal{Q}_1^\beta$ and outputs $[\vecb{a}]_1$ and a proof $\pi$ that $\vecb{a}\in\mathcal{Q}_1$.
+$\KGen$ on input a group key $gk$ and vector $\vecb{\beta}\in\bits^m$,  outputs $(k_0,k_1,\ldots,k_m)$ where $k_0 \gets \KGen_\mathsf{global}(gk)$ and  $k_i\gets \KGen_{\mathsf{local}}(gk,k_0,\beta_i)$. The global key generator $\KGen_\mathsf{global}$ on input a group key outputs Groth-Sahai commitment keys $[\matr{U}]_1,[\matr{V}]_2,[\matr{W}]_2$. We use two commitment keys in $\GG_2$ in order to open commitments computed with $[\matr{W}]_2$ even when the distribution of $[\matr{V}]_2$ is changed. Hence, we prove collision resistance even when the adversary knows $\matr{W}$. The local key generator on input a group key, a global key, and a bit $\beta\in\bits$, samples $\matr{a}\gets\mathcal{Q}_1^\beta$ and outputs $[\vecb{a}]_1$ and a proof $\pi$ that $\vecb{a}\in\mathcal{Q}_1$.
 %$[\vecb{c}]_2 = x[\vecb{w}_1]_2$, $[\vecb{d}]_1 = \Com_{[\matr{U}]_1}(\beta x)$ and proofs proofs $[\vecb{\psi}]_2,[\vecb{\omega}]_1,[\vecb{\xi}]_2,[\vecb{\phi}]_1$ and $[\vecb{\psi}]_2,[\vecb{\omega}]_1$ computed as in (\ref{eq:Qm-memb-proofs}) and (\ref{eq:wi-proofs}), respectively (see App.~\ref{sec:GSproofs-h} and \ref{sec:GSproofs-g}).
 %The function key is
 %$$
@@ -136,13 +136,13 @@ Next, we show that given $k$  it is hard to find $\matr{C}\not\simeq_\matr{W} \m
 %Further, for our ring signature, we require a slightly different reduction to the SXDH assumption. We allow the adversary against $g$ to give only commitments  to the purported collision, computed with commitment key $[\matr{W}]_2$, such that even the reduction ignores its opening. To achieve such strong guarantee, our reduction requires an additional advice indicating an index $i$ such that $x'_i\neq x'_j$ for all $j\in[m]$. To get a uniform treatment of both types of reduction, we consider reduction (an adversary against SXDH) $\advB$ which always receives an advice $i\in[0,m]$. If $i=0$ then the adversary against $g$ must give collisions ``in the clear'', and if $i>0$, then the adversary against $g$ is allowed to give committed collisions such that $x_i\neq x_i'$. Anyway, the proof for $i=0$ and $i>0$ are almost identical. 
 %The  next lemma shows adaptive collision resistance. 
 \begin{lemma} \label{lemma:g-cr-sxdh}
-For any adversary $\advA$ against adaptive collision resistance of $g$, making at most $m$  queries to the key-generator oracle and $t$ queries to the corruption oracle and $t<m$, there exists an adversary $\advB$ against SXDH such that the probability that $\advA$ outputs a collision $([\matr{C}]_1,[\vecb{\psi}]_2,[\vecb{\omega}]_1),([\matr{C}']_2,[\vecb{\psi}']_2,[\vecb{\omega}']_1)$ for $g_\matr{A}$  is less than $2m \adv_{\mathrm{SXDH}}(\advB)$. This statement holds even when $\matr{W}$, the discrete logs of $[\matr{W}]_2$, are given to the adversary 
+For any adversary $\advA$ against adaptive collision resistance of $g$, making at most $m$  queries to the key-generator oracle, at most $t$ queries to the corruption oracle, and $t<m$, there exists an adversary $\advB$ against SXDH such that the probability that $\advA$ outputs a collision $([\matr{C}]_1,[\vecb{\psi}]_2,[\vecb{\omega}]_1),([\matr{C}']_2,[\vecb{\psi}']_2,[\vecb{\omega}']_1)$ for $g_\matr{A}$  is less than $2m \adv_{\mathrm{SXDH}}(\advB)$. This statement holds even when $\matr{W}$, the discrete logs of $[\matr{W}]_2$, are given to the adversary 
 \end{lemma}
 \begin{proof}
 We may assume that the adversary is ``eager'', that is, it makes all its queries to the key-generator oracle at the beginning. Note that any non-eager adversary $\advA'$ can be perfectly simulated  by an eager adversary that makes $m$ queries to its oracle and answers $\advA'$ queries ``on demand''. This is justified by the fact that the output of the key-generator oracle is independent of all previous outputs.
 The proof follows from the indistinguishability of the following games.
 \begin{description}
-\item[$\sfGame_0(\advA)$:] This game honestly runs the adaptive collision resistance experiment for $g$ and outputs 1 if $\matr{C} \not\sim_\matr{W} \matr{C}'$ and $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1)=g_{\matr{A}}([\matr{C}']_2,[\vecb{\psi}']_2,\allowbreak[\vecb{\omega}']_2)$.
+\item[$\sfGame_0(\advA)$:] This game honestly runs the adaptive collision resistance experiment for $g$ and outputs 1 if $\matr{C}_\mathsf{h} \not\sim_\matr{W} \matr{C}'_\mathsf{h}$ and $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1)=g_{\matr{A}}([\matr{C}']_2,[\vecb{\psi}']_2,\allowbreak[\vecb{\omega}']_2)$, where $\matr{C}_\mathsf{h}, \matr{C}'_\mathsf{h}\in\Z_q^{2\times(m-t)}$ are the rows of $\matr{C}, \matr{C}'$, respectively, whose indices are not corrupted.
 \item[$\sfGame_1(\advA)$:] This game is exactly as $\sfGame_0$ but the openings $[\vecb{x}]_2,[\vecb{x}']_2$ are extracted from $[\matr{C}]_2,[\matr{C}']_2$, respectively. Additionally, the game picks $i\gets[m]$ and aborts if the adversary requests the random coins for generating $k_i$ or outputs $[x_i]_2=[x'_i]_2$.
 \item[$\sfGame_2(\advA)$:] This game is exactly as $\sfGame_1$ but $[\matr{U}]_1$ and $[\matr{V}]_2$ are sampled from the perfectly hiding distribution.
 \item[$\sfGame_3(\advA)$:] This game is exactly as $\sfGame_2$ but queries to $\mathsf{VKGen}$ are answered with $k_j\gets\KGen(gk,k_0,0)$ if $j\neq i$ and $k_j\gets\KGen(gk,k_0,1)$ otherwise.
@@ -174,13 +174,13 @@ Finaly, $\Pr[\sfGame_4(\advA)=1]=0$ since in this case $x_i \neq x'_i$ but $g_\m
 \subsubsection{Using $h$ and $g$ together.}
 Lemma \ref{lemma:g-crp-sxdh} relates functions $h$ and $g$ and is analogous to lemma \ref{lemma:hg} with some differences. When $g$ is instantiated in the ring signature it won't be possible to extract the permutation $\matr{P}$ which relates $\matr{A}$ and $\matr{A}'$ as with the PPA instantiation.\footnote{It might be also possible to extract $\matr{P}$ if we compute Groth-Sahai commitments to the randomness used to re-randomize $\matr{A}'$. This solution is far less efficient though.}
 %Further, instead of having $g_\matr{A}(\matr{C}) = g_{\matr{A}'}(\matr{C}')$ we only get that $g_\matr{A}(\matr{C}) = [\vecb{d}]_1[\vecb{w}_1^\top]_1$ and $g_{\matr{A}'}(\matr{C}') = [\vecb{d}']_1[\vecb{w}_1^\top]_1$ and $[\vecb{d}']_1-[\vecb{d}]_1 = \eta[\vecb{u}_2]_1$. We denote this relaxed collision condition by $g_\matr{A}(\matr{C}) \simeq_\matr{U} g_{\matr{A}'}(\matr{C}')$.
-We prove that, given a proof that $h(\matr{A}')=h(\matr{A})$, it is hard to find $\matr{C},\matr{C}'$ such that $g_\matr{A}(\matr{C})=g_\matr{A'}(\matr{C}')$ and $\matr{C}\not\sim_\matr{W}\matr{C}'$.
+We prove that, given a proof that $h(\matr{A}')=h(\matr{A})$, it is hard to find $\matr{C},\matr{C}'$ such that $g_\matr{A}(\matr{C})=g_\matr{A'}(\matr{C}')$ and $\matr{C}_\mathsf{h}\not\sim_\matr{W}\matr{C}'_\mathsf{h}$, where $\matr{C}_\mathsf{h},\matr{C}'_\mathsf{h}\in\Z_q^{2\times(m-t)}$ are the rows of $\matr{C}, \matr{C}'$, respectively, whose indices are not corrupted.
 
-We further need to assume that $\matr{C}$ opens to some $\vecb{x}$ without repeated entries. In this case, given that $\matr{C}'\not\sim_\matr{W}\matr{C}$, there is some $i$ such that $x_i\neq x'_j$ for any $j$. Indeed, to reach a contradiction assume that for all $i\in[m]$ there is some $j\in[m]$ such that $x_i=x'_j$. Even more, the assumption that $x_i\neq x_j$ for all $i\neq j$ implies that such $j$ must be unique. But then we might define the permutation $\pi$ which assigns $j$ to $i$ and $x_i = x'_{\pi(i)}$ for all $i$, which contradicts the assumption that $\vecb{x}$ is not a permutation of $\vecb{x}'$.
+We further need to assume that $\matr{C}_\mathsf{h}$ opens to some $\vecb{x}_\mathsf{h}$ without repeated entries. In this case, given that $\matr{C}'_\mathsf{h}\not\sim_\matr{W}\matr{C}_\mathsf{h}$, there is some $i$ such that $x_{\mathsf{h},i}\neq x'_{\mathsf{h},j}$ for any $j$. Indeed, to reach a contradiction assume that for all $i\in[m]$ there is some $j\in[m]$ such that $x_{\mathsf{h},i}=x'_{\mathsf{h},j}$. Even more, the assumption that $x_{\mathsf{h},i}\neq x_{\mathsf{h},j}$ for all $i\neq j$ implies that such $j$ must be unique. But then we might define the permutation $\pi$ which assigns $j$ to $i$ and $x_{\mathsf{h},i} = x'_{\mathsf{h},\pi(i)}$ for all $i$, which contradicts the assumption that $\vecb{x}_\mathsf{h}$ is not a permutation of $\vecb{x}'_\mathsf{h}$.
 
 Thereby, we can prove lemma \ref{lemma:g-crp-sxdh} in exactly the same way we proved lemma \ref{lemma:g-cr-sxdh}: we try to guess such $i$ and choose $\vecb{\beta}$ such that is $1$ only at position $i$. Then, whatever the permutation $\matr{P}$ is, $\vecb{\beta}^\top\matr{P}\vecb{x}' = x'_j \neq x_i = \vecb{\beta}^\top\vecb{x}$, for some $j\in[m]$.
 
- \begin{lemma} \label{lemma:g-crp-sxdh} Consider the following modified security game for adaptive collision-resistance. The adversary wins if it returns $[\matr{A}']_1,[\matr{C}']_2,[\vecb{\psi}']_1,[\vecb{\omega}']_2,[\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1$ and a Groth-Sahai proof that  $h(\matr{A})=h(\matr{A}')$ such that $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1) = g_{\matr{A}'}([\matr{C}']_2,\allowbreak[\vecb{\psi}']_2,[\vecb{\omega}']_2)$, but  $\matr{C}\not\sim_\matr{W}\matr{C}'$ and the opening $[\vecb{x}]_2$ of $[\matr{C}]_2$ has no repeated entries.
+ \begin{lemma} \label{lemma:g-crp-sxdh} Consider the following modified security game for adaptive collision-resistance. The adversary wins if it returns $[\matr{A}']_1,[\matr{C}']_2,[\vecb{\psi}']_1,[\vecb{\omega}']_2,[\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1$ and a Groth-Sahai proof that  $h(\matr{A})=h(\matr{A}')$ such that $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1) = g_{\matr{A}'}([\matr{C}']_2,\allowbreak[\vecb{\psi}']_2,[\vecb{\omega}']_2)$, but  $\matr{C}_\mathsf{h}\not\sim_\matr{W}\matr{C}'_\mathsf{h}$ and the opening $[\vecb{x}_\mathsf{h}]_2$ of $[\matr{C}_\mathsf{h}]_2$ has no repeated entries, where $\matr{C}_\mathsf{h},\matr{C}'_\mathsf{h}\in\Z_q^{2\times(m-t)}$ are the rows of $\matr{C}, \matr{C}'$, respectively, whose indices are not corrupted.
 
 Then, for any adversary $\advA$, making at most $m$  queries to the key-generator oracle and $t$ queries to the corruption oracle and $t<m$, there exists an adversary $\advB$ against SXDH such that the probability that $\advA$ outputs wins is less than $2m \adv_{\mathrm{SXDH}}(\advB)$. This statement holds even when $\matr{W}$, the discrete logs of $[\matr{W}]_2$, are given to the adversary.
 \end{lemma}
@@ -189,7 +189,7 @@ As in lemma \ref{lemma:g-cr-sxdh} we may assume, without loss of generality, tha
 
 The proof follows from the indistinguishability of the following games.
 \begin{description}
-\item[$\sfGame_0(\advA)$:] This game honestly runs the modified adaptive collision-resistance experiment for $g$ and outputs 1 if $[\matr{C}]_2 \not\sim_\matr{W}[\matr{C}']_2$ and $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,\allowbreak [\vecb{\omega}]_1)=g_{\matr{A}'}([\matr{C}']_2,[\vecb{\psi}']_2,[\vecb{\omega}']_2)$ and the proof that $h(\matr{A})=h(\matr{A}')$ is valid.
+\item[$\sfGame_0(\advA)$:] This game honestly runs the modified adaptive collision-resistance experiment for $g$ and outputs 1 if $\matr{C}_\mathsf{h} \not\sim_\matr{W} \matr{C}'_\mathsf{h}$ and $g_\matr{A}([\matr{C}]_2,[\vecb{\psi}]_2,\allowbreak [\vecb{\omega}]_1)=g_{\matr{A}'}([\matr{C}']_2,[\vecb{\psi}']_2,[\vecb{\omega}']_2)$ and the proof that $h(\matr{A})=h(\matr{A}')$ is valid.
 \item[$\sfGame_1(\advA)$:] This game is exactly as $\sfGame_0$ but it picks $i\gets[m]$ and aborts if the adversary requests the random coins for generating $k_i$ or $[x_i]_2=[x'_j]_2$ for some $j\in[m]$.
 \item[$\sfGame_2(\advA)$:] This game is exactly as $\sfGame_1$ but $[\matr{U}]_1$ and $[\matr{V}]_2$ are sampled from the perfectly hiding distribution.
 \item[$\sfGame_3(\advA)$:] This game is exactly as $\sfGame_2$ but queries to $\mathsf{VKGen}$ are answered with $k_j\gets\KGen(gk,k_0,0)$ if $j\neq i$ and $k_j\gets\KGen(gk,k_0,1)$ otherwise.
