--- a/intro/discussion.tex
+++ b/intro/discussion.tex
@@ -4,7 +4,7 @@
 
 Furthermore, Groth an Lu also conjectured that is hard to find $k_1,\ldots,k_n\in\GG$ such that $\sum_{i=1}^m e(\vecb{a}_i,vk_i)=0$ \cite{AC:GroLu07}. They give some evidence that this assumption might be true proving its hardness in the generic bilinear group model. It is direct to note that $g_{\vecb{a}_1,\ldots,\vecb{a}_m}(vk_1,\ldots,vk_m) = \sum_{i=1}^m e(\vecb{a}_i,vk_i)$ is collision resistant given the hardness of the aforementioned assumption.\footnote{The only problem with this definition is that $g$ outputs elements in $\GG_T$. To use Chandran et al.'s set-membership we need to get $g$'s output  in the base group. We solve this problem giving $vk_i\vecb{a}_i$ in the base group.}
 
-Apart from being based on non-standard, non-constant size assumptions (also known as $q$-assumptions), this instantiation of $h$ and $g$ has the following problem. A ring signature must tolerate adaptive corruption of the verification keys. That is, an adversary may adaptively asks for the random coins used for generating the verification keys which in this case amounts to reveal $x_i,x_i^2$. This is incompatible with PPA (unless one considers a much stronger interactive assumption), so the only alternative is to allow the key generation algorithm to erase its random coins.
+Apart from being based on non-constant size assumptions (also known as $q$-assumptions), this instantiation of $h$ and $g$ has the following problem. A ring signature must tolerate adaptive corruption of the verification keys. That is, an adversary may adaptively asks for the random coins used for generating the verification keys which in this case amounts to reveal $x_i,x_i^2$. This is incompatible with PPA (unless one considers a much stronger interactive assumption), so the only alternative is to allow the key generation algorithm to erase its random coins.
 
 \subsubsection{Getting rid of the PPA and the erasures asssumption.} Our starting point in the search of a more standard replacement for the permutation pairing assumption is the following. Consider the set of binary vectors of size $m$ and the function $h$ defined as the hamming weight of a binary vector $h(\vecb{\beta}) = \sum_{i=1}^m \beta_i$. Clearly, $h(\vecb{\beta})=h(\vecb{\beta}')$ and $\vecb{\beta},\vecb{\beta}'\in\bits^m$ implies that $\vecb{\beta'}$ is a permutation of $\vecb{\beta}$ unconditionally.
 The problem now is that, of course, is easy to find $vk_1,\ldots,{vk}_m$ such that $g_\vecb{\beta}(vk_1,\ldots,vk_m) = \sum_{i=1}^m \beta_i vk_i = 0$. But it is also not hard to come up with a solution.
@@ -12,11 +12,11 @@ The problem now is that, of course, is easy to find $vk_1,\ldots,{vk}_m$ such th
 Define $\vecb{a}_i = \Com_{ck}(\beta_i)$ a Groth-Sahai commitment to $\beta_i$. We might define $h(\vecb{a}_1,\ldots,\vecb{a}_m)$ as the hamming weight of $\vecb{\beta} = (\beta_1,\ldots,\beta_m)^\top$.
 Similarly, we can define $g_{\vecb{a}_1,\ldots,\vecb{a}_m}(vk_1,\ldots,vk_m) = \sum_{i=1}^m \beta_ivk_i$. Note that, since $\vecb{\beta}$ remains hidden, given $(vk'_1,\ldots,vk'_m)\neq (vk_1,\ldots,vk_m)$ such that $g_{\vecb{a}_1,\ldots,\vecb{a}_m}(vk_1,\ldots,vk_m) =g_{\vecb{a}_1,\ldots,\vecb{a}_m}(vk'_1,\ldots,vk'_m)$, we can change $\vecb{\beta}$ to a random binary vector of hamming weight 1. With probability roughly $1/m$, $\vecb{\beta}$ is has its unique 1 at the same position $i$ where $vk'_i \neq vk_i$. We conclude that $g$ is collision resistance under the hiding property of Groth-Sahai commitments which in turns, relies on the SXDH assumption.
 
-Although $h$ and $g$ are not efficiently computable, we can compute Groth-Sahai proofs that a)$h(\vecb{a}'_1,\ldots,\vecb{a}'_m)=h(\vecb{a}_1,\ldots,\vecb{a}_m)$, b)$\vecb{\beta}'\in\bits$, and that c)$g_{\vecb{a}_1,\ldots,\vecb{a}_m}(vk_1,\ldots,vk_m) =g_{\vecb{a}_1,\ldots,\vecb{a}_m}(vk'_1,\ldots,vk'_m)$ whenever $\vecb{a}'_1,\ldots,\vecb{a}'_m$ and $vk'_1,\ldots,vk'_m$ are permutations of $\vecb{a}_1,\ldots,\vecb{a}_m$ and $vk_1,\ldots,vk_m$. For simplicity, here we describe a simple, but inefficient, solution which computes Groth-Sahai commitments to Groth-Sahai commitments and Groth-Sahai proofs of the satisfiability of a Groth-Sahai verification equation. In section \ref{sec:hf-sxdh} we avoid this problem using re-randomization of Groth-Sahai proofs.
+Although $h$ and $g$ are not efficiently computable, we can compute Groth-Sahai proofs that a)$h(\vecb{a}'_1,\ldots,\vecb{a}'_m)=h(\vecb{a}_1,\ldots,\vecb{a}_m)$, b)$\vecb{\beta}'\in\bits$, and that c)$g_{\vecb{a}_1,\ldots,\vecb{a}_m}(vk_1,\ldots,vk_m) =g_{\vecb{a}_1,\ldots,\vecb{a}_m}(vk'_1,\ldots,vk'_m)$ whenever $\vecb{a}'_1,\ldots,\vecb{a}'_m$ and $vk'_1,\ldots,vk'_m$ are permutations of $\vecb{a}_1,\ldots,\vecb{a}_m$ and $vk_1,\ldots,vk_m$. For simplicity, here we describe a simple, but inefficient, solution which computes Groth-Sahai commitments to Groth-Sahai commitments and Groth-Sahai proofs of the satisfiability of a Groth-Sahai verification equation. In section \ref{sec:hf-sxdh} we avoid this problem using re-randomization of Groth-Sahai proofs \cite{C:BCCKLS09}.
  
-For case a) it suffices to compute a Groth-Sahai proof that $\sum_{i=1}^m \vecb{a}'_i - \sum_{i=1}^m\vecb{a}_i = 0$. Note that this requires computing commitments to $\vecb{a}_i$ (i.e. the commitment of a commitment) to keep anonymity. For  case b) we add proofs that $\beta_i(\beta_i-1)=0$ and use this proofs to derive a Groth-Sahai proof for the satisfiability of the verification equation of $\beta_i(\beta_i-1)=0$ (which requires commitments to Groth-Sahai proofs). For c) we add to the verification key Groth-Sahai proofs that $\beta_i vk_i = y_i$, which allows to derive a proof for $\sum_{i=1}^m \beta_i vk_i = y$ using the homomorphic properties of Groth-Sahai proofs. Again, we give a Groth-Sahai proof of the satisifiability of the verification equation for $\sum_{i=1}^m \beta_i vk_i = y$.
+Statement a) it suffices to compute a Groth-Sahai proof that $\sum_{i=1}^m \vecb{a}'_i - \sum_{i=1}^m\vecb{a}_i = 0$. Note that this requires computing commitments to $\vecb{a}_i$ (i.e. the commitment of a commitment) to keep anonymity. For  statement b) we add proofs that $\beta_i(\beta_i-1)=0$ and use this proofs to derive a Groth-Sahai proof for the satisfiability of the verification equation of $\beta_i(\beta_i-1)=0$ (which requires commitments to Groth-Sahai proofs). For c) we add to the verification key Groth-Sahai proofs that $\beta_i vk_i = y_i$, which allows to derive a proof for $\sum_{i=1}^m \beta_i vk_i = y$ using the homomorphic properties of Groth-Sahai proofs. Again, we give a Groth-Sahai proof of the satisifiability of the verification equation for $\sum_{i=1}^m \beta_i vk_i = y$.
 
-Finally, we note that we can avoid erasures as follows. We sample verification keys with $\beta_i=0$ for all $i$. Then function $g$ as defined before is collision resistant even when the adversary requests the openings of $\vecb{a}_i$ since is only $0$ plus the random coins but not the commitment keys which are part of a global reference string. Still, the adversary has no clue on which of the non corrupted $\vecb{a}_i$'s will open to $1$ when changing $\vecb{\beta}$. Further there is only a probability of $1/m$ on corrupting the unique $\vecb{a}_i$ which doesn't open to 0.
+Finally, we note that we can avoid erasures as follows. We sample verification keys with $\beta_i=0$ for all $i$. Then function $g$ as defined before is collision resistant even when the adversary requests the openings of $\vecb{a}_i$ since is only $0$ plus the random coins but not the commitment keys which are part of a global reference string. Still, the adversary has no clue on which of the non corrupted $\vecb{a}_i$'s will open to $1$ when changing $\vecb{\beta}$. Further there is only a probability of $1/m$ that the adversary corrupts the unique $\vecb{a}_i$ which doesn't open to 0.
 
 
 %\subsubsection{Extending our technique.}
